# play_k8s

./: .gitignore  CLAUDE.md  README.md
baremetal/: .gitignore  Taskfile.yml  provisioner.py  pyproject.toml  requirements.txt
baremetal/ansible/: ansible.cfg  site.yml
baremetal/ansible/roles/bootstrap-host/handlers/: main.yml
baremetal/ansible/roles/bootstrap-host/tasks/: main.yml
baremetal/ansible/roles/calico/tasks/: main.yml
baremetal/ansible/roles/cilium/tasks/: main.yml
baremetal/ansible/roles/common/tasks/: main.yml
baremetal/ansible/roles/ha-control-plane/tasks/: main.yml
baremetal/ansible/roles/master-init/tasks/: main.yml
baremetal/ansible/roles/master-join/tasks/: main.yml
baremetal/ansible/roles/operators/tasks/: main.yml
baremetal/configs/: config.yaml
baremetal/scripts/: build-iso.sh  redfish.sh
baremetal/templates/: autoinstall-user-data.yaml.j2  dnsmasq.conf.j2  haproxy.cfg.j2  keepalived.conf.j2  network-config.yaml.j2  nginx-site.conf.j2
prepare/: .gitignore  README.md  install-config.yaml.j2  prepare.py
scripts/: README.md  provisioner.py  requirements.txt  setup_image_registry.sh
step-01/: README.md  cloud-init-master.yaml  cloud-init-worker.yaml  cloud-init-worker2.yaml  network-config-master.yaml  network-config-worker.yaml  network-config-worker2.yaml
step-02/: README.md  config-02.sh
step-03/: README.md  config-03.sh
step-04/: README.md
step-05/: README.md
step-06/: README.md  deployment.yaml  ingress.yaml  service.yaml
step-07/: README.md
step-08/: README.md
step-09/: README.md  csr.yaml  developer.csr  (+3 more)
(+38 files in other folders)
